--- a/category-crud/backend/package.json
+++ b/category-crud/backend/package.json
@@ -14,7 +14,8 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.5.0",
-    "mongoose": "^8.3.1"
+    "mongoose": "^8.3.1",
+    "nanoid": "^5.0.7"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
