--- a/category-crud/frontend/package.json
+++ b/category-crud/frontend/package.json
@@ -12,7 +12,9 @@
     "axios": "^1.6.8",
     "next": "14.1.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sonner": "^1.4.41",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/node": "^20",
